--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "^12.0.3",
     "react": "^17.0.2",
     "react-datocms": "^1.6.6",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.4.1",
