UI updates to Article page. Zephr POC (commented out in article page)

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@zephr/sdk": "^1.1.0",
     "date-fns": "2.25.0",
     "next": "^12.0.3",
     "react": "^17.0.2",
