--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "react": "^17.0.2",
     "react-datocms": "^1.6.9",
     "react-dom": "^17.0.2",
+    "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/typography": "^0.5.0",
     "autoprefixer": "^10.4.1",
     "dotenv": "10.0.0",
