--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   },
   "dependencies": {
     "date-fns": "2.28.0",
-    "next": "^12.0.7",
+    "next": "^12.0.8",
     "react": "^17.0.2",
-    "react-datocms": "^1.6.9",
+    "react-datocms": "^3.0.0",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1"
@@ -19,14 +19,15 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/typography": "^0.5.0",
-    "autoprefixer": "^10.4.1",
-    "dotenv": "10.0.0",
-    "eslint": "8.6.0",
-    "eslint-config-next": "12.0.7",
+    "autoprefixer": "^10.4.2",
+    "dotenv": "14.3.2",
+    "eslint": "8.7.0",
+    "eslint-config-next": "12.0.8",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
-    "tailwindcss": "^3.0.9"
+    "prettier-plugin-tailwindcss": "^0.1.4",
+    "tailwindcss": "^3.0.16"
   }
 }
