--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^1.7.0",
     "date-fns": "2.28.0",
     "next": "^12.1.0",
     "react": "^17.0.2",
-    "react-datocms": "^3.0.10",
+    "react-datocms": "^3.0.11",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1"
@@ -27,7 +28,7 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "postcss": "^8.4.6",
     "prettier": "^2.5.1",
-    "prettier-plugin-tailwindcss": "^0.1.7",
+    "prettier-plugin-tailwindcss": "^0.1.8",
     "tailwindcss": "^3.0.23"
   }
 }
