--- a/package.json
+++ b/package.json
@@ -8,27 +8,28 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth0/nextjs-auth0": "^1.8.0",
-    "date-fns": "2.28.0",
-    "next": "^12.1.6",
-    "react": "^18.1.0",
-    "react-datocms": "^3.0.12",
-    "react-dom": "^18.1.0",
-    "react-hot-toast": "^2.2.0",
-    "react-icons": "^4.3.1"
+    "@auth0/nextjs-auth0": "^1.9.1",
+    "@zephr/sdk": "^1.1.0",
+    "date-fns": "2.29.3",
+    "next": "^12.3.0",
+    "react": "^18.2.0",
+    "react-datocms": "^3.1.1",
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.2",
-    "@tailwindcss/typography": "^0.5.2",
-    "autoprefixer": "^10.4.7",
-    "dotenv": "16.0.1",
-    "eslint": "8.15.0",
-    "eslint-config-next": "12.1.6",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.7",
+    "autoprefixer": "^10.4.10",
+    "dotenv": "16.0.2",
+    "eslint": "8.23.1",
+    "eslint-config-next": "12.3.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
-    "postcss": "^8.4.14",
-    "prettier": "^2.6.2",
-    "prettier-plugin-tailwindcss": "^0.1.11",
-    "tailwindcss": "^3.0.24"
+    "eslint-plugin-simple-import-sort": "^8.0.0",
+    "postcss": "^8.4.16",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
+    "tailwindcss": "^3.1.8"
   }
 }
