--- a/.env.local.example
+++ b/.env.local.example
@@ -1,6 +1,12 @@
-GRAPHQL_API_TOKEN=read-only-api-token-from-datocms
-AUTH0_SECRET='use [openssl rand -hex 32] to generate a 32 bytes value'
-AUTH0_BASE_URL='http://localhost:3000'
-AUTH0_ISSUER_BASE_URL='https://YOUR_DOMAIN'
-AUTH0_CLIENT_ID='YOUR_CLIENT_ID'
-AUTH0_CLIENT_SECRET='YOUR_CLIENT_SECRET'
+GRAPHQL_API_TOKEN="read-only-api-token-from-datocms"
+DATOCMS_API_TOKEN="full-access-api-token-from-datocms"
+DATOCMS_BUILD_TRIGGER_ID="build-trigger-id"
+VF_DOMAIN="viafoura-site-domain"
+VF_SITE_ID="viafoura-site-id"
+VF_SITE_UUID="viafoura-site-uuid"
+VF_USERS_PASSWORD="any-password-with-at-least-8-characters"
+AUTH0_SECRET="use [openssl rand -hex 32] to generate a 32 bytes value"
+AUTH0_BASE_URL="auth0-base-url"
+AUTH0_ISSUER_BASE_URL="auth0-domain"
+AUTH0_CLIENT_ID="auth0-client-id"
+AUTH0_CLIENT_SECRET="auth0-client-secret"
