TI-469: Site Broadcast Notifications

--- a/.env.local.example
+++ b/.env.local.example
@@ -5,6 +5,7 @@ VF_DOMAIN="viafoura-site-domain"
 VF_SITE_ID="viafoura-site-id"
 VF_SITE_UUID="viafoura-site-uuid"
 VF_USERS_PASSWORD="any-password-with-at-least-8-characters"
+VF_AUTH_CREDENTIAL="viafoura-auth-credential"
 AUTH0_SECRET="use [openssl rand -hex 32] to generate a 32 bytes value"
 AUTH0_BASE_URL="auth0-base-url"
 AUTH0_ISSUER_BASE_URL="auth0-domain"
