--- a/package.json
+++ b/package.json
@@ -17,20 +17,21 @@
     "react-datocms": "^7.0.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "react-onesignal": "^3.0.1"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.13",
-    "autoprefixer": "^10.4.19",
+    "autoprefixer": "^10.4.20",
     "dotenv": "16.4.5",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.5",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "postcss": "^8.4.39",
+    "postcss": "^8.4.40",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
-    "tailwindcss": "^3.4.5"
+    "tailwindcss": "^3.4.7"
   }
 }
